kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bm-photo
  labels:
    app.kubernetes.io/name: bm-photo
    app.kubernetes.io/managed-by: kubectl
