kubernetes/04-service-account.yaml
apiVersion: v1
kind: Service
metadata:
  name: bm-photo
  namespace: bm-photo
  labels:
    app.kubernetes.io/name: bm-photo
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: bm-photo
    app.kubernetes.io/component: app
